<resources>
    <string name="app_name">ExploraHolic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Registration">New here?
        <b>Register</b>
    </string>
    <string name="Tiger_hill">Tiger Hill Lonavala Dist-60Km from pune</string>
    <string name="Tiger_hill_info">The Tiger point derives its name from its resemblance to the shape of a leaping
        tiger. It offers spectacular views of forests, lush greenery, waterfalls and lakes around. The sunrise and
        sunset views from here are mesmerizing.
    </string>

    <string name="mahabaleshwar">Mahabaleshwar Dist-120km from pune</string>
    <string name="mahabaleshwar_info">Mahabaleshwar is a hill station in Indias forested Western Ghats range, south of
        Mumbai. It features several elevated viewing points.West of here is centuries-old Pratapgad Fort, perched atop a
        mountain spur
    </string>

    <string name="Khadakwasla">Khadakwasla Dam Dist-14km from pune</string>
    <string name="Khadakwasla_info">Khadakwasla Dam is a dam on the Mutha River 21 km from the centre of the city of
        Pune in Maharashtra, India. The dam created a reservoir known as Khadakwasla Lake which is the main source of
        water for Pune and its suburbs.
    </string>

    <string name="Mulashi">Mulashi Dam Dist-40.5km from pune</string>
    <string name="Mulashi_info">Mulshi is the name of a major dam on the Mula river. It is located in the Mulshi taluka
        administrative division of the Pune.Water from the dam is used for irrigation as well as for producing
        electricity at the Bhira hydroelectric power plant.
    </string>

    <string name="Rajgad">Rajgad Fort Dist-143km from pune</string>
    <string name="Rajgad_info">Rajgad is a hill fort, Formerly known as Murumdev. The fort was the capital of the
        Maratha Empire under the rule of Chatrapati Shivaji Maharaj for almost 26 years, after which the capital was
        moved to the Raigad Fort.
    </string>

    <string name="Lohgad">Lohgad Fort Dist-37.5km from pune</string>
    <string name="Lohgad_info">Lohagad is one of the many hill forts of Maharashtra state in India. Situated close to
        the hill station Lonavala and 52 km northwest of Pune, Lohagad rises to an elevation of 1,033 m above sea level.
        The fort is connected to the neighboring Visapur fort by a small range.
    </string>

    <string name="Register">New here? Register</string>
    <string name="Login">Already have account? Login</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="history">Pune is the cultural capital of the Maratha people.\n\n
        The city first gained importance as the capital of the Bhonsle Marathas in the 17th century.\n
        It was temporarily captured by the Mughals but again served as the official Maratha capital from 1714 until its
        fall to the British in 1817. It was the seasonal capital of the Bombay Presidency and is now a popular tourist
        resort,
        offering cool weather, historic and religious monuments, museums, parks, hotels, and cultural attractions.\n\n
        <b>Pune has long been a major educational and cultural centre.</b>\n
        The region surrounding Pune includes the Sahyadri Hills, the Balaghat Range (north), and the Mahadeo Hills
        (south),
        which enclose the northern Bhima River valley.\n
        Most of the important religious, historical, and tourist attractions of the region are located in the Sahyadri
        Hills.
    </string>
    <string name="timetable">PMPML offer different types of bus services including Regular, Rainbow, Night,Pune Darshan,
        Ladies Special And Air Conditioned bus
        PMPML is also one of the largest bus transport service operator with fleet over 2100 buses. With more than 400
        bus routes and 2500 bus stops. It connects almost every part of pune and sub-urban with its huge network of
        buses

    </string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <!--    <string-array name="gender_list">-->
    <!--        <hint>Gender</hint>-->
    <!--        <item>Male</item>-->
    <!--        <item>Female</item>-->
    <!--        <item>Other</item>-->
    <!--    </string-array>-->

</resources>