<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <activity
            android:id="@+id/nav_home"
            android:name="com.example.exploraholic.Dashboard.Dashboard"
            android:label="@string/menu_home"
            tools:layout="@layout/activity_dashboard"/>

<!--    <fragment-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:name="com.example.exploraholic.Dashboard.ui.gallery.GalleryFragment"-->
<!--            android:label="@string/menu_gallery"-->
<!--            tools:layout="@layout/fragment_gallery"/>-->

    <activity
            android:id="@+id/nav_profile"
            android:name="com.example.exploraholic.MainScreens.EditProfile"
            android:label="@string/menu_profile"
            tools:layout="@layout/activity_profile"/>

    <activity
            android:id="@+id/nav_map"
            android:name="com.example.exploraholic.MapScreen.MapWithSearchbar"
            android:label="@string/menu_map"
            tools:layout="@layout/activity_map_with_searchbar"/>

    <activity
            android:id="@+id/nav_logout"
            android:name="com.example.exploraholic.MainScreens.LoginScreen"
            android:label="@string/menu_logout"
            tools:layout="@layout/activity_login_screen"/>


</navigation>