<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"            xmlns:tools="http://schemas.android.com/tools"            xmlns:app="http://schemas.android.com/apk/res-auto"            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@drawable/regsc"
            android:id="@+id/layoutHill">

    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context="Hillstations"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:layout_margin="15dp"
            android:foreground="?selectableItemBackground"
            android:id="@+id/Card_View"
            android:background="@color/black"
            android:clickable="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/hi1"
                    android:src="@drawable/mhill"
                    android:scaleType="centerCrop"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ht1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#184695"
                    android:text="@string/mahabaleshwar"/>

            <ImageButton android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:id="@+id/mapImg1"
                         android:layout_marginTop="-30dp"
                         android:layout_marginStart="320dp"
                         android:layout_marginEnd="10dp"
                         android:src="@drawable/map"
                         android:backgroundTint="@color/blue"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ht2"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/mahabaleshwar_info"/>

<!--            <ImageButton android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:id="@+id/mbtn"-->
<!--                    android:layout_marginTop="-135dp"-->
<!--                    android:layout_marginLeft="330dp"-->
<!--                    android:src="@drawable/next"-->
<!--                         android:background="@color/purple_700"-->
<!--            />-->
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="370dp">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/ti1"
                    android:src="@drawable/tighill"
                    android:scaleType="centerCrop"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tt1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#184695"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/Tiger_hill"/>

            <ImageButton android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:id="@+id/mapImg2"
                         android:layout_marginTop="-30dp"
                         android:layout_marginStart="320dp"
                         android:layout_marginEnd="10dp"
                         android:src="@drawable/map"
                         android:backgroundTint="@color/blue"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tt2"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:text="@string/Tiger_hill_info"/>

<!--            <ImageButton android:layout_width="40dp"-->
<!--                         android:layout_height="40dp"-->
<!--                         android:id="@+id/tbtn"-->
<!--                         android:layout_marginTop="-135dp"-->
<!--                         android:layout_marginLeft="330dp"-->
<!--                         android:src="@drawable/next"-->
<!--                         android:background="@color/purple_700"-->
<!--            />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>